[project]
name = "flood-forecasting-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Edgar Mevaa",email = "mevaed4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "openmeteo-requests (>=1.3.0,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "flood_forecasting_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
